# adb-linux-standalone-cmake-gcc

./: CMakeLists.txt
adb/: Android.bp  adb.cpp  adb_mdns.cpp  adb_mdns.h  adb_trace.cpp  services.cpp  socket_spec.cpp  transport.cpp
adb/client/: adb_client.cpp  adb_client.h  adb_install.cpp  commandline.cpp  main.cpp  usb.h
adb/fdevent/: fdevent_epoll.cpp
include/: platform_tools_version.h
libbuildversion/: CMakeLists.txt
system/core/diagnose_usb/: CMakeLists.txt
system/core/libutils/: CMakeLists.txt
system/libbase/: CMakeLists.txt  logging.cpp
system/libbase/include/android-base/: logging.h  thread_annotations.h  unique_fd.h
system/liblog/: CMakeLists.txt  event_tag_map.cpp  logd_reader.cpp  logd_writer.cpp  logger.h  pmsg_writer.cpp
system/libziparchive/: CMakeLists.txt
